--- a/style.css
+++ b/style.css
@@ -55,10 +55,13 @@
 #column{
     float: left;
     width: 32%;
+    color: white;
 }
 #row{
     display: table;
     clear: both;
+    color: white;
+
 }
 .bottom{
     text-align: center;
